# InternalManagement

./: .gitignore  ADMIN_RESET_README.md  AI_MODEL_ANALYSIS.md  AI_RECOMMENDATION_ARCHITECTURE.md  AI_SKILL_EMBEDDINGS_GUIDE.md  ARCHITECTURE_OPTIMIZATION_SUMMARY.md  DASHBOARD_ENHANCEMENT_SUMMARY.md  DIAGRAM_SUBDIVISION_PROGRESS.md  ENHANCED_DASHBOARD_CHARTS_SPECIFICATION.md  ENHANCED_DASHBOARD_GUIDE.md  ENHANCED_DASHBOARD_IMPLEMENTATION_GUIDE.md  ENUM_ALIGNMENT_FIX.md  GIAI_THICH_THUAT_TOAN_ML.md  HOW_TO_RUN_PYTHON_ML_SERVICE.md  HYBRID_ALGORITHM_EXPLAINED.md  MAIN_FUNCTION_USE_CASES.md  MICROSERVICES_DOCUMENTATION.md  ML_API_ARCHITECTURE_EXPLANATION.md  ML_SERVICE_DATABASE_SCHEMA.md  PERFORMANCE_MANAGEMENT_UI_GUIDE.md  PERFORMANCE_SCORE_CALCULATION.md  PROGRESS_TRACKING_DESIGN.md  README.md  RECOMMENDATION_SYSTEM_SUMMARY.md  SYSTEM_DIAGRAMS.md  TEST_CASES.md  USE_CASE_DIAGRAMS.md  cv_text.txt  docker-compose.yml  package-lock.json  package.json  reset-admin.bat  run-identity-service.bat  test-users-data.json
ml-service/ml-training-python/: check_data_sources.py  dashboard.py  evaluate_actual_models.py  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.cfg  start_python_ml_service.sh  start_scheduler.sh  train_models.py  validate.py  validate_fixes.py  verify_data.sh  verify_performance_scores.py  verify_training_data.py  view_data.py
ml-service/ml-training-python/config/: docker_config.yaml  model_config.yaml
ml-service/ml-training-python/src/: __init__.py
ml-service/ml-training-python/src/api/: __init__.py  ml_api.py  model_server.py
(+1123 files in other folders)
